# aoc-fs

./: .gitignore  Cargo.toml  Readme.md  aoc-fs-config.toml.example
src/: config.rs  filesystem.rs  main.rs  web.rs
